# libovpncli

./: CMakeLists.txt  README.md  config.h.in
doc/: README.json.md
src/: CMakeLists.txt  common.h  ctx.c  ctx.h  err.c  err.h  libovpncli.c  libovpncli.h  log.c  log.h  ovpn.c  ovpn.h  util.c  util.h  win32.h
tests/: CMakeLists.txt  README.md  config.json  conn_params.json  ovpn_cli_test.c
